@@ -1,3 +1,13 @@
+2004-01-06  Ronald Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/shout/gstshout.c: (gst_icecastsend_base_init),
+	(gst_icecastsend_init):
+	  fix for new caps system.
+	* gst-libs/gst/mixer/mixertrack.h:
+	* sys/oss/gstossmixer.c: (gst_ossmixer_build_list):
+	  Add 'master track' flag (for tools like ACME that only want to
+	  change the main volume).
+
 2004-01-07  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* ext/xvid/gstxvid.c: (gst_xvid_structure_to_csp),
